[package]
name = "fonttest"
version = "0.1.0"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "font size"
repository = "https://github.com/LucianoBestia/fonttest"
readme = "README.md"
license = "MIT"
keywords = ["wasm","font","size"]
categories = ["learning"]

[lib]
crate-type = ["cdylib"]

[profile.release]
#smaller wasm size
lto = true
#optimize for size 's', more opt for size 'z'
opt-level = 'z'

[dependencies]
cfg-if="0.1.10"
unwrap = "1.2.1"
dodrio =  { git = "https://github.com/fitzgen/dodrio", branch = "master" }
wasm-bindgen = { version = "0.2.57", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"
futures ="0.3.1"
wasm-bindgen-futures = "0.4.6"
log = "0.4.8"
strum = "0.17.1"
strum_macros = "0.17.1"
typed-html = {version="0.2.1", features = ["dodrio_macro"]}
conv = "0.3.3"

[dependencies.web-sys]
version = "0.3.34"
features = [
  "AbortController",
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomException",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "Location",
  "MouseEvent",
  "Node",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "TextMetrics",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.7"